--- a/Effective Java II/2.创建和销毁对象/2.1 考虑静态工厂方法代替构造器.md
+++ b/Effective Java II/2.创建和销毁对象/2.1 考虑静态工厂方法代替构造器.md
@@ -1,6 +1,44 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.1 考虑静态工厂方法代替构造器
 
+### 静态工厂方法的优点
 
+- 它们有名称。
+- 不必在每次调用它们的时候都创建一个新对象。
+- 它们可以返回原返回类型的任何子类型对象。
+- 在创建参数化类型实例对象的时候，它们使代码变得更加简洁。
+
+### 静态工厂方法的缺点
+
+- 类如果不含公有的或者受保护的构造器，就不能被实例化。
+- 它们与其他的静态方法实际上没有任何区别。
+
+### 静态工厂惯用名称
+- `valueOf`
+- `of`
+- `getInstance`
+- `newInstance`
+- `getType`
+- `newType`
+
+### 服务提供者框架（Service Provider Framework）
+
+> 服务提供者框架中有三个重要的组件：
+
+- 服务接口（Service Interface）：这是提供者实现的.
+- 提供者注册API（Provider Registration API），这是系统用来注册实现的，让客户端访问它们的。
+- 服务访问API（Service Access API），是客户端用来获取服务实例的。
+
+服务提供者接口（Service Provider Interface）负责创建起服务实现的实例。
+
+例如： JDBC， 
+- Connection 就是它的服务接口，
+- DriverManager.registerDriver是提供者注册API，
+- DriverManager.get.connection是服务访问API，
+- Driver就是服务提供者接口。
+  
+### 最佳实践
+
+静态工厂方法与构造器各有利弊，要善于运用它们各自的长处。
 
