--- a/Effective Java II/2.创建和销毁对象/2.2 遇到多个构造器参数时要考虑用构建器.md
+++ b/Effective Java II/2.创建和销毁对象/2.2 遇到多个构造器参数时要考虑用构建器.md
@@ -1,6 +1,21 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.2 遇到多个构造器参数时要考虑用构建器
 
+### 重叠构造器模式
 
+> 当参数过多时，不可取
+
+### `JavaBeans` 模式
+
+> 最不可取，谨慎使用
+
+### 使用 `Builder` 模式
+
+> 既能保证想重叠构造器模式那样安全，也能保证像`JavaBeans` 模式那么好的可读性。
+
+### 最佳实践
+
+> 如果类的构造器或者静态工厂方法中具有多个参数，
+> 设计这种类时， `Builder` 模式就是种不错的选择。 
 
