--- a/Effective Java II/2.创建和销毁对象/2.3 用私有构造器或者枚举类型强化 `singleton` 属性.md
+++ b/Effective Java II/2.创建和销毁对象/2.3 用私有构造器或者枚举类型强化 `singleton` 属性.md
@@ -1,6 +1,25 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.3 用私有构造器或者枚举类型强化 `singleton` 属性
 
+### 单例模式
+> 注意以下两点：
+- 利用反射的安全机制
+- 序列化和反序列化单例对象
 
+### 最佳实践 
+> 编写一个包含单个元素的枚举类型，无偿提供序列化机制，绝对防止多次实例化，
+> 即使在面对复杂的序列化或者反射攻击的时候。
 
+```java
+
+public enum Elvis {
+    
+    INSTANCE;
+    
+    public void leaveTheBuilding(){
+        System.out.println("这是使用单元素枚举实现的单例。。。。");
+    }
+}
+
+```
