--- a/Effective Java II/2.创建和销毁对象/2.4 通过私有构造器强化不可实例化的能力.md
+++ b/Effective Java II/2.创建和销毁对象/2.4 通过私有构造器强化不可实例化的能力.md
@@ -1,6 +1,19 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.4 通过私有构造器强化不可实例化的能力
 
+### 最佳实践
 
+>只需要静态域和静态方法的工具类，显式地定义一个私有的构造器，禁止实例化
 
+> 禁止默认构造函数，确保不可实例化。
+
+```java
+
+public class Collections {
+    // Suppresses default constructor, ensuring non-instantiability.
+    private Collections() {
+    }
+    // ……
+}
+```
