--- a/Effective Java II/2.创建和销毁对象/2.6 消除过期的对象引用.md
+++ b/Effective Java II/2.创建和销毁对象/2.6 消除过期的对象引用.md
@@ -1,6 +1,14 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.6 消除过期的对象引用
 
+所谓过期引用：是指永远也不会再被解除的引用。
+随着过期引用的不断增多，可能将会导致内存泄漏问题。
 
+### 内存泄漏的常见原因
 
+- 类自己管理内存。
+- 缓存。
+- 监听器和其他回调。
+
+> 内存泄漏可能潜伏期很长，要仔细检查代码，或借助于 Heap剖析工具(Heap Profiler)。
