6.枚举和注解

--- a/Effective Java II/目录.md
+++ b/Effective Java II/目录.md
@@ -35,6 +35,13 @@
     - 5.6 利用有限制通配符来提升 `API` 的灵活性
     - 5.7 优先考虑类型安全的异构容器
 -  6.枚举和注解
+    - 6.1 用 `enum` 代替 `int` 变量
+    - 6.2 用实例域代替序数
+    - 6.3 用 `EnumSet` 代替位域
+    - 6.4 用 `EnumMap` 代替序数索引
+    - 6.5 用接口模拟可伸缩的枚举
+    - 6.6 注解优先于命名模式
+    - 6.7 用标记接口定义类型
 -  7.方法
 -  8.通用程序设计
 -  9.异常
