6.枚举和注解

--- a/Effective Java II/目录.md
+++ b/Effective Java II/目录.md
@@ -41,7 +41,8 @@
     - 6.4 用 `EnumMap` 代替序数索引
     - 6.5 用接口模拟可伸缩的枚举
     - 6.6 注解优先于命名模式
-    - 6.7 用标记接口定义类型
+    - 6.7 坚持使用 `Override` 注解
+    - 6.8 用标记接口定义类型
 -  7.方法
 -  8.通用程序设计
 -  9.异常
