--- a/Effective Java II/6.枚举和注解/6.1 用 `enum` 代替 `int` 变量.md
+++ b/Effective Java II/6.枚举和注解/6.1 用 `enum` 代替 `int` 变量.md
@@ -13,7 +13,7 @@ public static final int ORANGE_BLOOD = 2;
 
 ## 枚举
 
-> `java`枚举类型的基本思想，它们使通过公有的静态`final`域为每个枚举常量导出实例的类，
+> `java`枚举类型的基本思想，它们是通过公有的静态`final`域为每个枚举常量导出实例的类，
 > 因为没有可以访问的构造器，所以枚举类型是真正的final，
 > 客户端既不能创建枚举类型的实例，也不能对它进行扩展，
 > 因此很可能没有实例，而只有声明过的枚举常量。
