--- a/Linux Shell Scripting Cookbook/第一章.md
+++ b/Linux Shell Scripting Cookbook/第一章.md
@@ -52,3 +52,16 @@ chmod a+x hello.sh
 PS: 一般情况下，如果一个shell 文件不具有可执行权限，tab 键是不会自动补全的。
 
 字符 # 指明注释的开始。注释部分以 # 为起始，一直延续到行尾。
+
+在Bash中，每个命令或是命令序列是通过使用分号或者换行符来分隔的。
+
+```bash
+
+$ cmd1 ; cmd2
+
+# 等同于
+
+$ cmd1
+$ cmd2
+
+```
