--- a/Linux Shell Scripting Cookbook/第一章 小试牛刀/1.1 简介.md
+++ b/Linux Shell Scripting Cookbook/第一章 小试牛刀/1.1 简介.md
@@ -49,6 +49,18 @@ echo "hello world, Linux shell!"
 先执行一下命令进行授权：
 chmod a+x hello.sh 
 
+```bash
+
+sh hello.sh
+
+
+./hello.sh
+
+
+/home/hello.sh
+
+```
+
 PS: 一般情况下，如果一个shell 文件不具有可执行权限，tab 键是不会自动补全的。
 
 字符 # 指明注释的开始。注释部分以 # 为起始，一直延续到行尾。
